--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Uber</title>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <div class="container">
+                <ul class="menu">
+                    <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
+                    <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="subheader">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 offset-md-1">
+                        <a href="#" class="subheader_logo">
+                            <img src="icons/logo.png" alt="logo">
+                        </a>
+                        <div class="subheader_official">
+                            Официальный партнер Uber в Москве
+                        </div>
+                    </div>
+                    <div class="col-md-2 offset-md-2">
+                        <div class="subheader_call_text">Звоните нам ежедневно</div>
+                        <a href="tel:+74957970988" class="subheader_call_number">8 495 797 09 88</a>
+                    </div>
+                    <div class="col-md-2">
+                        <button class="order_call">Заказать звонок</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="promo">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10 offset-md-1">
+                    <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
+                    <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
+                    <p class="promo_descr">Компания UBER динамически развивающаяся. Компания на рынке занимает
+                        лидирующее место среди
+                        таксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у
+                        себя в личном кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания
+                        начисляет бонусы за
+                        пиковое время.</p>
+                    <p class="promo_descr"> Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в
+                        городе Москве. Водители у нас
+                        зарабатывают от 80000- 120000 в месяц.</p>
+                    <button class="promo_send_request">ОТПРАВИТЬ ЗАЯВКУ!</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
