--- a/src/index.html
+++ b/src/index.html
@@ -271,6 +271,22 @@
             </div>
         </div>
     </section>
+    <section class="possibilities">
+        <div class="container">
+            <div class="possibilities_bg_black"></div>
+            <div class="label label_white">возможности</div>
+            <div class="title title_white">Выбор - отличная штука!</div>
+            <div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
+            <div class="row"></div>
+            <div class="col-md-8 offset-md-2">
+                <img src="img/car_bg.png" alt="car bg" class="possibilities_img">
+            <div class="col-md-4 offset-md-4">
+                <div class="possibilities_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
+            </div>
+            
+        </div>
+    </div>
+    </section>
 </body>
 
 </html>
