--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
                         <a href="tel:+74957970988" class="subheader_call_number">8 495 797 09 88</a>
                     </div>
                     <div class="col-md-2">
-                        <button class="order_call">Заказать звонок</button>
+                        <button class="subheader_btn">Заказать звонок</button>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                     <p class="promo_descr"> Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в
                         городе Москве. Водители у нас
                         зарабатывают от 80000- 120000 в месяц.</p>
-                    <button class="promo_send_request">ОТПРАВИТЬ ЗАЯВКУ!</button>
+                    <button class="promo_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
                 </div>
             </div>
         </div>
@@ -223,49 +223,37 @@
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_1">
                         <div class="mobile_item_subtitle">оформление заказа одним касанием</div>
-                        <div class="mobile_item_plus">
-                            <img src="icons/plus.png" alt="plus">
-                        </div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_2">
                         <div class="mobile_item_subtitle">надежная подача</div>
-                        <div class="mobile_item_plus">
-                            <img src="icons/plus.png" alt="plus">
-                        </div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_3">
                         <div class="mobile_item_subtitle">прозрачные цены</div>
-                        <div class="mobile_item_plus">
-                            <img src="icons/plus.png" alt="plus">
-                        </div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_4">
                         <div class="mobile_item_subtitle">безналичная оплата</div>
-                        <div class="mobile_item_plus">
-                            <img src="icons/plus.png" alt="plus">
-                        </div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_5">
                         <div class="mobile_item_subtitle">обратная связь</div>
-                        <div class="mobile_item_plus">
-                            <img src="icons/plus.png" alt="plus">
-                        </div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="mobile_item mobile_item_6">
                         <div class="mobile_item_subtitle">разделить стоимость поездки</div>
-                        <div class="mobile_item_plus">
-                            <img src="icons/plus.png" alt="plus">
-                        </div>
+                        <div class="mobile_item_plus"></div>
                     </div>
                 </div>
             </div>
@@ -280,12 +268,70 @@
             <div class="row"></div>
             <div class="col-md-8 offset-md-2">
                 <img src="img/car_bg.png" alt="car bg" class="possibilities_img">
-            <div class="col-md-4 offset-md-4">
-                <div class="possibilities_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
+                <div class="col-md-4 offset-md-4">
+                    <div class="possibilities_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
+                </div>
+
             </div>
-            
         </div>
-    </div>
+    </section>
+    <section class="conditions_requirements">
+        <div class="container">
+            <div class="label">возможности</div>
+            <div class="title">условия и требования</div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="conditions_requirements_item">
+                        <div class="conditions_requirements_item_title"><span>условия</span>: со своим авто:</div>
+                        <ul class="conditions_requirements_item_list">
+                            <li>Подключаем к системе UBER под 10%.</li>
+                            <li>Никаких взносов 0%!</li>
+                            <li>Можем подключать удаленно без приезда в офис</li>
+                            <li>ИП не требуется</li>
+                            <li>Заказы распределяются без учета рейтинга ближайшим водителям</li>
+                            <li>Работа только по безналичному расчету</li>
+                            <li>Деньги перечисляем на карту водителю или наличными в офисе</li>
+                        </ul>
+                        <div class="conditions_requirements_item_bonus">В день заработок составляет 7000-12000р + бонус 3000т рублей
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="conditions_requirements_item">
+                        <div class="conditions_requirements_item_title warning"><span>условия</span>: на авто компании:</div>
+                        <ul class="conditions_requirements_item_list">
+                            <li>Предоставляем авто без залога</li>
+                            <li>Без ежедневных выплат по аренде</li>
+                            <li>Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</li>
+                        </ul>
+                    </div>
+                </div>
+                    <div class="col-md-6">
+                        <div class="conditions_requirements_item warning">
+                            <div class="conditions_requirements_item_title"><span>требование:</span></div>
+                            <ul class="conditions_requirements_item_list">
+                                <li>Наличие автомобиля без рекламы</li>
+                                <li>Автомобиль не должен быть желтый и не с желтыми номерами</li>
+                                <li>Машина не старше 3 лет</li>
+                                <li>Стаж вождения не менее 3 лет</li>
+                                <li>Девайс на системе андроид 4.0и выше(самсунг)</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="conditions_requirements_item warning">
+                            <div class="conditions_requirements_item_title"><span>документы:</span></div>
+                            <ul class="conditions_requirements_item_list">
+                                <li>Права 2 стороны</li>
+                                <li>Паспорт лицевая сторона</li>
+                                <li>СтС</li>
+                                <li>Лицензия( если есть)</li>
+                                <li>Номер телефона</li>
+                                <li>Номер карты для перечисления денег(указать в письме)!</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
     </section>
 </body>
 
