part of homework done

--- a/src/index.html
+++ b/src/index.html
@@ -333,6 +333,22 @@
                     </div>
                 </div>
     </section>
+    <section class="world">
+        <div class="container">
+            <div class="label label_white">города</div>
+            <div class="title title_white">По всему миру</div>
+            <div class="subtitle subtitle_white">Мы в вашем городе и по всему миру</div>
+            <div class="world_link">
+                <a href="#">посмотреть все города</a>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <hr class="hr_footer">
+        <div class="social_icons"></div>
+        <div class="footer_links"></div>
+        <div class="footer_app_links"></div>
+    </footer>
 </body>
 
 </html>
