--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/0816f064cd.js" crossorigin="anonymous"></script>
     <title>Uber</title>
 </head>
 
@@ -292,13 +293,15 @@
                             <li>Работа только по безналичному расчету</li>
                             <li>Деньги перечисляем на карту водителю или наличными в офисе</li>
                         </ul>
-                        <div class="conditions_requirements_item_bonus">В день заработок составляет 7000-12000р + бонус 3000т рублей
+                        <div class="conditions_requirements_item_bonus">В день заработок составляет 7000-12000р + бонус
+                            3000т рублей
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="conditions_requirements_item">
-                        <div class="conditions_requirements_item_title warning"><span>условия</span>: на авто компании:</div>
+                        <div class="conditions_requirements_item_title warning"><span>условия</span>: на авто компании:
+                        </div>
                         <ul class="conditions_requirements_item_list">
                             <li>Предоставляем авто без залога</li>
                             <li>Без ежедневных выплат по аренде</li>
@@ -306,32 +309,32 @@
                         </ul>
                     </div>
                 </div>
-                    <div class="col-md-6">
-                        <div class="conditions_requirements_item warning">
-                            <div class="conditions_requirements_item_title"><span>требование:</span></div>
-                            <ul class="conditions_requirements_item_list">
-                                <li>Наличие автомобиля без рекламы</li>
-                                <li>Автомобиль не должен быть желтый и не с желтыми номерами</li>
-                                <li>Машина не старше 3 лет</li>
-                                <li>Стаж вождения не менее 3 лет</li>
-                                <li>Девайс на системе андроид 4.0и выше(самсунг)</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="conditions_requirements_item warning">
-                            <div class="conditions_requirements_item_title"><span>документы:</span></div>
-                            <ul class="conditions_requirements_item_list">
-                                <li>Права 2 стороны</li>
-                                <li>Паспорт лицевая сторона</li>
-                                <li>СтС</li>
-                                <li>Лицензия( если есть)</li>
-                                <li>Номер телефона</li>
-                                <li>Номер карты для перечисления денег(указать в письме)!</li>
-                            </ul>
-                        </div>
+                <div class="col-md-6">
+                    <div class="conditions_requirements_item warning">
+                        <div class="conditions_requirements_item_title"><span>требование:</span></div>
+                        <ul class="conditions_requirements_item_list">
+                            <li>Наличие автомобиля без рекламы</li>
+                            <li>Автомобиль не должен быть желтый и не с желтыми номерами</li>
+                            <li>Машина не старше 3 лет</li>
+                            <li>Стаж вождения не менее 3 лет</li>
+                            <li>Девайс на системе андроид 4.0и выше(самсунг)</li>
+                        </ul>
                     </div>
                 </div>
+                <div class="col-md-6">
+                    <div class="conditions_requirements_item warning">
+                        <div class="conditions_requirements_item_title"><span>документы:</span></div>
+                        <ul class="conditions_requirements_item_list">
+                            <li>Права 2 стороны</li>
+                            <li>Паспорт лицевая сторона</li>
+                            <li>СтС</li>
+                            <li>Лицензия( если есть)</li>
+                            <li>Номер телефона</li>
+                            <li>Номер карты для перечисления денег(указать в письме)!</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
     </section>
     <section class="world">
         <div class="container">
@@ -343,11 +346,50 @@
             </div>
         </div>
     </section>
-    <footer>
+    <footer class="footer">
         <hr class="hr_footer">
-        <div class="social_icons"></div>
-        <div class="footer_links"></div>
-        <div class="footer_app_links"></div>
+        <div class="wrapper">
+            <div>
+                <div class="footer_social_icons">
+                    <a href="#"><i class="fab fa-facebook-f"></i></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div>
+                <div class="footer_links">
+                    <div class="footer_links_main">
+                        <a href="#">на главную</a>
+                        <a href="#">города</a>
+                        <a href="#">для водителей</a>
+                    </div>
+                    <div class="footer_links_sublinks">
+                        <a href="">центр поддержки</a>
+                        <a href="">вакансии</a>
+                        <a href="">разработчики</a>
+                        <a href="">блог</a>
+                        <a href="">о нас</a>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="footer_links_stores">
+                    <a href="#">
+                        <img src="icons/app_store_icon.png" alt="app store">
+                    </a>
+                    <a href="#">
+                        <img src="icons/google_play_icon.png" alt="google play">
+                    </a>
+                    <a href="#">
+                        <img src="icons/windows_store_icon.png" alt="windows store">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="footer_language">
+            <a href="#">русский</a>
+        </div>
     </footer>
 </body>
 
