--- a/src/index.html
+++ b/src/index.html
@@ -38,11 +38,11 @@
                             Официальный партнер Uber в Москве
                         </div>
                     </div>
-                    <div class="col-md-2 offset-md-2">
+                    <div class="col-md-3 offset-md-1 col-xl-2 offset-xl-1">
                         <div class="subheader_call_text">Звоните нам ежедневно</div>
                         <a href="tel:+74957970988" class="subheader_call_number">8 495 797 09 88</a>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-3 col-xl-2">
                         <button class="subheader_btn">Заказать звонок</button>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
     <section class="promo">
         <div class="container">
             <div class="row">
-                <div class="col-md-10 offset-md-1">
+                <div class="col-md-12 offset-md-0 col-lg-10 offset-lg-1">
                     <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
                     <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
                     <p class="promo_descr">Компания UBER динамически развивающаяся. Компания на рынке занимает
@@ -79,15 +79,15 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <div class="reason_item">
-                        <div class="reason_item_round">
+                    <div class="reasons_item">
+                        <div class="reasons_item_round">
                             <img src="icons/reasons/cash_icon.png" alt="cash icon" class="reason_item_img">
                         </div>
 
-                        <div class="reason_item_descr">
-                            <p class="reason_item_descr_title"> Никаких наличных, оплата происходит
+                        <div class="reasons_item_descr">
+                            <p class="reasons_item_descr_title"> Никаких наличных, оплата происходит
                                 автоматически</p>
-                            <p class="reason_item_descr_text"> Стоимость поездки оплачивается пассажиром с привязанной
+                            <p class="reasons_item_descr_text"> Стоимость поездки оплачивается пассажиром с привязанной
                                 банковской карты, т.е. нет никаких рисков связанных с перевозкой наличности как для
                                 пассажира, так и для водителя, Вам не нужно искать мелкие деньги для размена.</p>
                         </div>
@@ -95,14 +95,14 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="reason_item">
-                        <div class="reason_item_round">
+                    <div class="reasons_item">
+                        <div class="reasons_item_round">
                             <img src="icons/reasons/chart_icon.png" alt="chart icon" class="reason_item_img">
                         </div>
 
-                        <div class="reason_item_descr">
-                            <p class="reason_item_descr_title"> Комиссия 8% + БОНУСЫ</p>
-                            <p class="reason_item_descr_text"> У нас минимальная комиссия и мы выплачиваем бонусы за
+                        <div class="reasons_item_descr">
+                            <p class="reasons_item_descr_title"> Комиссия 8% + БОНУСЫ</p>
+                            <p class="reasons_item_descr_text"> У нас минимальная комиссия и мы выплачиваем бонусы за
                                 каждую
                                 поездку, некоторые наши конкуренты оставляют бонусы себе. Мы работаем честно и с
                                 нами
@@ -112,15 +112,15 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="reason_item">
-                        <div class="reason_item_round">
+                    <div class="reasons_item">
+                        <div class="reasons_item_round">
                             <img src="icons/reasons/money_icon.png" alt="money icon" class="reason_item_img">
                         </div>
 
-                        <div class="reason_item_descr">
-                            <p class="reason_item_descr_title"> Высокий доход с гарантированными
+                        <div class="reasons_item_descr">
+                            <p class="reasons_item_descr_title"> Высокий доход с гарантированными
                                 выплатами</p>
-                            <p class="reason_item_descr_text"> Мы выплачиваем заработную плату на личную банковскую
+                            <p class="reasons_item_descr_text"> Мы выплачиваем заработную плату на личную банковскую
                                 карту
                                 водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию,
                                 оплачивать бухгалтерские услуги и ведение банковского счета.</p>
@@ -129,15 +129,15 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="reason_item">
-                        <div class="reason_item_round">
+                    <div class="reasons_item">
+                        <div class="reasons_item_round">
                             <img src="icons/reasons/calendar_icon.png" alt="calendar icon" class="reason_item_img">
                         </div>
 
-                        <div class="reason_item_descr">
-                            <p class="reason_item_descr_title"> Работа в удобное время, никаких
+                        <div class="reasons_item_descr">
+                            <p class="reasons_item_descr_title"> Работа в удобное время, никаких
                                 графиков</p>
-                            <p class="reason_item_descr_text"> Вы просто нажимаете кнопку выйти на линию для начала
+                            <p class="reasons_item_descr_text"> Вы просто нажимаете кнопку выйти на линию для начала
                                 работы,
                                 когда решите закончить, нажимаете выйти с линии. Вы можете подрабатывать только
                                 утром,
@@ -147,15 +147,15 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="reason_item">
-                        <div class="reason_item_round">
+                    <div class="reasons_item">
+                        <div class="reasons_item_round">
                             <img src="icons/reasons/key_icon.png" alt="key icon" class="reason_item_img">
                         </div>
 
-                        <div class="reason_item_descr">
-                            <p class="reason_item_descr_title"> Комфортное, прозрачное и простое
+                        <div class="reasons_item_descr">
+                            <p class="reasons_item_descr_title"> Комфортное, прозрачное и простое
                                 подключение</p>
-                            <p class="reason_item_descr_text"> Мы подключаем дистанционно и бесплатно, Вам нет
+                            <p class="reasons_item_descr_text"> Мы подключаем дистанционно и бесплатно, Вам нет
                                 необходимости приезжать к нам! Вы
                                 присылаете нам копии документов, мы регистрируем Вас и присылаем данные для
                                 подключения, через 1-2 дня Вы можете начинать работать!</p>
@@ -164,14 +164,14 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="reason_item">
-                        <div class="reason_item_round">
+                    <div class="reasons_item">
+                        <div class="reasons_item_round">
                             <img src="icons/reasons/map_icon.png" alt="map icon" class="reason_item_img">
                         </div>
 
-                        <div class="reason_item_descr">
-                            <p class="reason_item_descr_title">Всегда большое количество заказов</p>
-                            <p class="reason_item_descr_text"> Приложение показывает, где на данный момент больше всего
+                        <div class="reasons_item_descr">
+                            <p class="reasons_item_descr_title">Всегда большое количество заказов</p>
+                            <p class="reasons_item_descr_text"> Приложение показывает, где на данный момент больше всего
                                 заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых
                                 пробегов.
                                 Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно
@@ -181,14 +181,14 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="reason_item">
-                        <div class="reason_item_round">
+                    <div class="reasons_item">
+                        <div class="reasons_item_round">
                             <img src="icons/reasons/support_icon.png" alt="support icon" class="reason_item_img">
                         </div>
 
-                        <div class="reason_item_descr">
-                            <p class="reason_item_descr_title">Круглосуточная поддержка</p>
-                            <p class="reason_item_descr_text"> В Uber действует круглосуточная поддержка водителей по
+                        <div class="reasons_item_descr">
+                            <p class="reasons_item_descr_title">Круглосуточная поддержка</p>
+                            <p class="reasons_item_descr_text"> В Uber действует круглосуточная поддержка водителей по
                                 электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через
                                 On-line
                                 консультацию.</p>
@@ -197,14 +197,14 @@
                 </div>
 
                 <div class="col-md-6">
-                    <div class="reason_item">
-                        <div class="reason_item_round">
+                    <div class="reasons_item">
+                        <div class="reasons_item_round">
                             <img src="icons/reasons/car_icon.png" alt="car icon" class="reason_item_img">
                         </div>
 
-                        <div class="reason_item_descr">
-                            <p class="reason_item_descr_title"> Без шашечек и наклеек</p>
-                            <p class="reason_item_descr_text"> Вам не нужно менять цвет, устанавливать «шашки» на
+                        <div class="reasons_item_descr">
+                            <p class="reasons_item_descr_title"> Без шашечек и наклеек</p>
+                            <p class="reasons_item_descr_text"> Вам не нужно менять цвет, устанавливать «шашки» на
                                 автомобиль
                                 и обклеивать его наклейками.</p>
                         </div>
@@ -267,7 +267,7 @@
             <div class="title title_white">Выбор - отличная штука!</div>
             <div class="subtitle subtitle_white">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
             <div class="row"></div>
-            <div class="col-md-8 offset-md-2">
+            <div class="col-md-9 offset-md-1 col-xl-8 offset-xl-2">
                 <img src="img/car_bg.png" alt="car bg" class="possibilities_img">
                 <div class="col-md-4 offset-md-4">
                     <div class="possibilities_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
